# bullseye

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  TES_starsign_fake_data_gen.py  bullseye.py  bullseye_frontend.py  image_comparing_tool.py  jones_matrix_writer.py  setup.cfg  setup.py  uv_parametric_equations.py
algorithms/: CMakeLists.txt  base_types.h  baseline_transform_policies.h  convolution_policies.h  fft_shift_utils.h  gridding.h  gridding_parameters.h  jones_2x2.h  phase_transform_policies.h  polarization_gridding_policies.h  polarization_gridding_traits.h  timer.h  uvw_coord.h  wrapper.cpp  wrapper.h
algorithms/double/: CMakeLists.txt
algorithms/single/: CMakeLists.txt
algorithms/tests/: CMakeLists.txt  unit_tests.cpp
benchmarks/: CMakeLists.txt  benchmark.cpp
bullseye/: bullseye.py  bullseye_frontend.py  bullseye_pipeliner.py  image_comparing_tool.py  jones_matrix_writer.py
bullseye/algorithms/: fft_shift_utils.cpp  gridding_parameters.h  uvw_coord.h  wrapper.h
bullseye/data/: data_set_loader.py  fits_export.py  png_export.py  stokes.py
bullseye/gpu_algorithm/: baseline_transform_policies.h
bullseye/helpers/: channel_indexer.py  channel_list_extractor.py  command_line_options.py  convolution_filter.py  coord_extractor.py  data_set_loader.py  facet_list_parser.py  fft_utils.py  fits_export.py  gridding_parameters.py  png_export.py  stokes.py  timer.py
bullseye/mo/: base_types.py  convolution_filter.py  gridding_parameters.py  library_loader.py
bullseye/mo/cpu_algorithm/: templated_gridder.h  wrapper.cpp
bullseye/mo/cpu_gpu_common/: fft_and_repacking_routines.cpp  gridding_parameters.h
bullseye/mo/gpu_algorithm/: convolution_policies.h  cu_double_atomic.h  cu_indexing_schemes.h  dft.h  templated_gridder.h  timer.h
bullseye/mo/gpu_algorithm/double/: CMakeLists.txt
bullseye/parameter_handlers/: command_line_options.py  coord_extractor.py
bullseye/viewcontrollers/: frmFacetDisplay.py  frmMain.py  main.glade
bullseye/writing_and_wiki/notebooks/: Filter design.ipynb
bullseye/writing_and_wiki/notebooks/.ipynb_checkpoints/: Filter design-checkpoint.ipynb
bullseye_measurement_operator/: convolution_filter.py  gridding_parameters.py
bullseye_measurement_operator/algorithms/: fft_and_repacking_routines.cpp  fft_and_repacking_routines.h  polarization_gridding_traits.h
bullseye_measurement_operator/benchmarks/: benchmark.cpp
bullseye_measurement_operator/gpu_algorithm/: correlation_gridding_policies.h
bullseye_measurement_operator/gpu_algorithm/double/: CMakeLists.txt
bullseye_measurement_operator/gpu_algorithm/single/: CMakeLists.txt
bullseye_mo/: CMakeLists.txt  base_types.py  convolution_filter.py  gridding_parameters.py  library_loader.py
bullseye_mo/algorithms/: baseline_transform_policies.h  convolution_policies.h  fft_and_repacking_routines.cpp  fft_shift_utils.cpp  gridding.h  gridding_parameters.h  jones_2x2.h  phase_transform_policies.h  polarization_gridding_policies.h  polarization_gridding_traits.h  timer.h  wrapper.cpp  wrapper.h
bullseye_mo/algorithms/single/: CMakeLists.txt
bullseye_mo/benchmarks/: CMakeLists.txt  benchmark.cpp
bullseye_mo/cpu_algorithm/: CMakeLists.txt  convolution_policies.h  correlation_gridding_policies.h  templated_gridder.h  wrapper.cpp
bullseye_mo/cpu_algorithm/double/: CMakeLists.txt
bullseye_mo/cpu_algorithm/single/: CMakeLists.txt
bullseye_mo/cpu_gpu_common/: base_types.h  baseline_transform_policies.h  baseline_transform_traits.h  correlation_gridding_traits.h  cu_basic_complex.h  cu_common.h  cu_vec.h  fft_and_repacking_routines.cpp  fft_and_repacking_routines.h  fft_shift_utils.h  phase_transform_policies.h  sincos.h  uvw_coord.h
bullseye_mo/gpu_algorithm/: baseline_transform_policies.h  convolution_policies.h  correlation_gridding_policies.h  correlation_gridding_traits.h  cu_double_atomic.h  cu_vec.h  gpu_wrapper.h  phase_transform_policies.h  templated_gridder.h  wrapper.cu
bullseye_mo/gpu_algorithm/double/: CMakeLists.txt
bullseye_mo/gpu_algorithm/single/: CMakeLists.txt
bullseye_mo/new_multithreaded_approach/: convolution_policies.h  correlation_gridding_policies.h  templated_gridder.h  wrapper.cpp
bullseye_mo/new_multithreaded_approach/double/: CMakeLists.txt
bullseye_mo/new_multithreaded_approach/single/: CMakeLists.txt
gpu_algorithm/: CMakeLists.txt  correlation_gridding_policies.h  correlation_gridding_traits.h  cu_basic_complex.h  cu_common.h  cu_indexing_schemes.h  cu_vec.h  dft.h  finalization_routines.cpp  gpu_wrapper.h  gridder.h  phase_transform_policies.h  templated_gridder.h  timer.h  wrapper.cu
gpu_algorithm/double/: CMakeLists.txt
gpu_algorithm/single/: CMakeLists.txt
gpu_dft/: CMakeLists.txt  cu_common.h  dft.h  wrapper.cpp
helpers/: base_types.py  command_line_options.py  convolution_filter.py  data_set_loader.py  facet_list_parser.py  fft_utils.py  fits_export.py  gridding_parameters.py  timer.py
misc/: 3C147.lsm.html  TES_starsign_fake_data_gen.py  gen_data.sh  jones_matrix_writer.py  uv_parametric_equations.py
misc/EVLA/: table.f0
models/: convolution_filter.py  data_set_loader.py
unit_tests/: CMakeLists.txt  unit_tests.cpp
viewcontrollers/: facetDisplay.glade  frmFacetDisplay.py  frmMain.py  main.glade
writing_and_wiki/notebooks/: Convolution Kernels.ipynb  Error relations.ipynb  Fourier Shifting.ipynb  Resampling.ipynb
