[metadata]
description-file = README.rst

[install]
# At absolutely your own peril you can specify options to cmake e.g. compile against a custom version of numpy etc.
# or enabling architecture dependent optimizations during compile time.
# TAKE NOTE::: disable before pusing a sdist and bdist_wheel to pypi - supposed to 
# be architecture independent!!!
compopts=-DENABLE_NATIVE_TUNING=OFF -DENABLE_FAST_MATH=ON -DCMAKE_BUILD_TYPE=Release -DSUPPORTED_GPU_ARCHITECTURES='-gencode arch=compute_30,code=sm_30 -gencode arch=compute_30,code=sm_30 -gencode arch=compute_35,code=sm_35 -gencode arch=compute_50,code=sm_50'

[build]
#See [install] comment
compopts=-DENABLE_NATIVE_TUNING=OFF -DENABLE_FAST_MATH=ON -DCMAKE_BUILD_TYPE=Release -DSUPPORTED_GPU_ARCHITECTURES='-gencode arch=compute_30,code=sm_30 -gencode arch=compute_30,code=sm_30 -gencode arch=compute_35,code=sm_35 -gencode arch=compute_50,code=sm_50'

[bdist_wheel]
universal=0